--- a/index.html
+++ b/index.html
@@ -1,8 +1,34 @@
 <!DOCTYPE html>
-<html>
-  <head><title>Hello World</title></head>
-  <body>
-    <h1>Hello, world!</h1>
-    <p></p>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>Gaussian Splatter Viewer</title>
+  <style>
+    html, body {
+      margin: 0;
+      height: 100%;
+      background: #000;
+      overflow: hidden;
+    }
+    #viewer {
+      width: 100%;
+      height: 100%;
+    }
+  </style>
+</head>
+<body>
+  <div id="viewer"></div>
+
+  <!-- Load SuperSplat Viewer -->
+  <script src="https://superspl.at/supersplat.js"></script>
+  <script>
+    SuperSplatViewer.init({
+      container: 'viewer',
+      modelUrl: './yourfile.ply',  // Replace with your actual file name
+      backgroundColor: [0, 0, 0],  // Black background
+      pointSize: 1.0,
+      orbitControls: true
+    });
+  </script>
+</body>
 </html>
