--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <script>
     SuperSplatViewer.init({
       container: 'viewer',
-      modelUrl: './yourfile.ply',  // Replace with your actual file name
+      modelUrl: './quick_vanadinite.ply',  // Replace with your actual file name
       backgroundColor: [0, 0, 0],  // Black background
       pointSize: 1.0,
       orbitControls: true
