--- a/index.html
+++ b/index.html
@@ -2,20 +2,33 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Gaussian Splatter</title>
+  <title>Gaussian Splatter Viewer</title>
   <style>
     html, body {
       margin: 0;
       height: 100%;
+      background: #000;
+      overflow: hidden;
     }
-    iframe {
-      border: none;
+    #viewer {
       width: 100%;
       height: 100%;
     }
   </style>
 </head>
 <body>
-  <iframe src="https://superspl.at/view?id=bac4dcae" allowfullscreen></iframe>
+  <div id="viewer"></div>
+
+  <!-- Load SuperSplat Viewer -->
+  <script src="https://superspl.at/supersplat.js"></script>
+  <script>
+    SuperSplatViewer.init({
+      container: 'viewer',
+      modelUrl: 'https://www.dropbox.com/scl/fi/qezbknrnceifwn6uealkp/quick_vanadinite.ply?rlkey=sfl56hn30dsk79pygokhh4aii&st=1ecdtz0o&dl=1',
+      backgroundColor: [0, 0, 0],
+      pointSize: 1.0,
+      orbitControls: true
+    });
+  </script>
 </body>
 </html>
