--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
   </style>
 </head>
 <body>
-  <iframe src="https://superspl.at/view?id=bac4dcae" allowfullscreen></iframe>
+  <iframe id="viewer" allow="fullscreen; xr-spatial-tracking" src="https://superspl.at/s?id=bac4dcae"></iframe>
 </body>
 </html>
